Fix alignment of text on cards

--- a/styles/base.css
+++ b/styles/base.css
@@ -313,10 +313,13 @@ nav .btn:hover {
   border: solid 1px #dedede;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   padding: 1.8rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto minmax (140px, 1fr auto);
 }
 
 .tripList h3,
-.tripList img {
+.tripList img { grid-row: 1 / 2;
+  grid-column: 1;
 }
 
 .tripList h3 {
@@ -326,6 +329,7 @@ nav .btn:hover {
   margin-bottom: 1rem;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(51, 51, 51, 0.7);
+  align-self: end;
 }
 
 .trips a {
